base/details-v1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: carvel-harbor.customer0.io/bookinfo-bundle/dependencies@sha256:18e54f81689035019e1ac78f6d2e6483fcf1d94072d047315ab193cb2ab89ae5
        URL: carvel-harbor.customer0.io/bookinfo-bundle/dependencies@sha256:18e54f81689035019e1ac78f6d2e6483fcf1d94072d047315ab193cb2ab89ae5
  labels:
    app: details
    version: v1
  name: details-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      containers:
      - image: carvel-harbor.customer0.io/bookinfo-bundle/dependencies@sha256:18e54f81689035019e1ac78f6d2e6483fcf1d94072d047315ab193cb2ab89ae5
        imagePullPolicy: IfNotPresent
        name: details
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
