base/details-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: details
    service: details
  name: details
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: details
