base/productpage-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: productpage
    service: productpage
  name: productpage
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: productpage
