base/ratings-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ratings
    service: ratings
  name: ratings
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: ratings
