base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ianz: triggerbuild
    springone: demo
  name: productpage-ingress
spec:
  rules:
  - host: bookinfo.isv.com
    http:
      paths:
      - backend:
          serviceName: productpage
          servicePort: 9080
        path: /
